Fixed minor manpage inconsistencies

--- a/asciify.1
+++ b/asciify.1
@@ -1,13 +1,13 @@
-.TH ASCIIFY 1 asciify\-1.0
+.TH ASCIIFY "1" "March 2023" "asciify\-1.0"
 .SH NAME
-asciify \- small image to ascii-art converter
+asciify \- convert images to ascii-art
 .SH SYNOPSIS
 .B asciify
-.RB [ \-hinov ]
+.RB [ \-hinv ]
 .RB [ \-o
 .IR outfile ]
 .RB [ \-r
 .IR fac ]
 .RB [ \-s
 .IR string ]
-img
+.IR img
