--- a/asciify.1
+++ b/asciify.1
@@ -38,3 +38,5 @@ scale image down by a factor
 .TP
 .BI \-s " string"
 use a substitute brightness string
+.SH AUTHOR
+Written by duszku <https://github.com/duszku>
